# euccontenthub

./: .gitignore  AGENTS.md  CHAT-AWS-DOCS-READY-TO-DEPLOY.md  CONTENT-CART-ISSUE-COMPLETE.md  DEPLOYMENT.md  DOCKER-BUILD-QUICKSTART.md  Dockerfile.ecs-selenium  Dockerfile.selenium  EUC-SERVICE-MAPPING-README.md  EUC-USE-CASE-MATCHER-README.md  INFRASTRUCTURE.md  ISSUE-1-PROGRESS.md  ISSUE-22-FINAL-SUMMARY.md  KB_EDITOR_GITHUB_ISSUE_UPDATE.md  KB_EDITOR_READY.md  LEAVE-FREEZE-RUNBOOK-2026-06-26.md  PRODUCTION-REBUILD-ASSESSMENT.md  README.md  SELENIUM-CRAWLER-DEPLOYMENT-GUIDE.md  SUMMARY-GENERATOR-RULES.md  TASK_COMPLETE.md  TEST_CHECKLIST.md  _deployment-config.json.json  add_lambda_self_invoke_permission.py  add_missing_kb_endpoints.py  add_profile_and_animations.py  add_temp_cart_display.md  align_profile_button.py  amazon-email-verification-deployment-progress.md  autochain-fix-complete.md  autochain-root-cause-analysis.md  autochain-session-complete.md  aws-docs-api-fix-complete.md  aws-docs-citations-feature-complete.md  aws-docs-relevance-filtering-complete.md  aws-docs-url-filtering-complete.md  aws_blog_posts.csv  batch-size-optimization-complete.md  bedrock-moderation-policy.json  bedrock-throttling-solution.md  (+414 more)
.kiro/: ENVIRONMENT-SETUP.md
api_lambda_deploy/: lambda_function.py
builder_playwright_package/: build_and_verify_zip.py  lambda_function.py  test_save_change_detection.py  test_spa_shell_guard.py
chat_lambda_code/: chat_lambda.py
crawler_code/: lambda_function.py  test_builder_crawler.py
crawler_package/: lambda_function.py  (+1 more)
frontend/: app.js  (+28 more)
(+132 files in other folders)
