[project]
name = "euc-content-hub-mcp"
version = "1.0.0"
description = "MCP server exposing the EUC Content Hub corpus (AWS Blog + Builder.AWS posts) and community proposals, so AI agents can discover existing content and propose new content"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT-0" }
authors = [{ name = "AWS End User Computing" }]
keywords = ["mcp", "aws", "workspaces", "appstream", "euc", "content", "proposals"]
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
euc-content-hub-mcp = "euc_content_hub_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/euc_content_hub_mcp"]
